--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,219 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/main"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="fill"
-    android:columnCount="2"
-    android:rowCount="1">
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_row="0"
-        android:layout_rowSpan="1"
-        android:layout_rowWeight="1"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_columnWeight="1"
-        android:gravity="center_vertical|end"
-        android:src="@drawable/illustration" />
+    android:fillViewport="true">
 
     <GridLayout
-        android:id="@+id/calc_layout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:id="@+id/main"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="fill"
-        android:layout_row="0"
-        android:layout_rowSpan="1"
-        android:layout_rowWeight="1"
-        android:layout_column="1"
-        android:layout_columnSpan="1"
-        android:layout_columnWeight="1"
-        android:gravity="center_vertical|end"
         android:columnCount="2"
-        android:rowCount="6">
+        android:rowCount="1">
 
-        <!--        Row 1       -->
-        <TextView
-            android:id="@+id/core_diameter_lbl"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_row="1"
-            android:layout_rowSpan="1"
-            android:layout_rowWeight="1"
-            android:layout_column="0"
-            android:layout_columnSpan="1"
-            android:layout_columnWeight="3"
-            android:gravity="center_vertical|end"
-            android:inputType="none"
-            android:autoSizeTextType="uniform"
-            android:maxLines="1"
-            android:text="Hollow core diameter (mm)" />
-
-
-        <EditText
-            android:id="@+id/core_diameter"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_row="1"
-            android:layout_rowSpan="1"
-            android:layout_rowWeight="1"
-            android:layout_column="1"
-            android:layout_columnSpan="1"
-            android:layout_columnWeight="2"
-            android:autofillHints=""
-            android:gravity="center_vertical|start"
-            android:inputType="number"
-            android:autoSizeTextType="uniform"
-            android:paddingStart="16dp"
-            android:maxLines="1"  />
-
-        <!--        Row 2       -->
-        <TextView
-            android:id="@+id/full_radius_lbl"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_row="2"
-            android:layout_rowSpan="1"
-            android:layout_rowWeight="1"
-            android:layout_column="0"
-            android:layout_columnSpan="1"
-            android:layout_columnWeight="3"
-            android:gravity="center_vertical|end"
-            android:inputType="none"
-            android:autoSizeTextType="uniform"
-            android:maxLines="1"
-            android:text="Full radial distance (mm)" />
-
-
-        <EditText
-            android:id="@+id/full_radius"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_row="2"
-            android:layout_rowSpan="1"
-            android:layout_rowWeight="1"
-            android:layout_column="1"
-            android:layout_columnSpan="1"
-            android:layout_columnWeight="2"
-            android:autofillHints=""
-            android:gravity="center_vertical|start"
-            android:inputType="number"
-            android:autoSizeTextType="uniform"
-            android:paddingStart="16dp"
-            android:maxLines="1" />
-
-        <!--        Row 3       -->
-        <TextView
-            android:id="@+id/empty_radius_lbl"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_row="3"
-            android:layout_rowSpan="1"
-            android:layout_rowWeight="1"
-            android:layout_column="0"
-            android:layout_columnSpan="1"
-            android:layout_columnWeight="3"
-            android:gravity="center_vertical|end"
-            android:inputType="none"
-            android:autoSizeTextType="uniform"
-            android:maxLines="1"
-            android:text="Empty radial distance (mm)" />
-
-
-        <EditText
-            android:id="@+id/empty_radius"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_row="3"
-            android:layout_rowSpan="1"
-            android:layout_rowWeight="1"
-            android:layout_column="1"
-            android:layout_columnSpan="1"
-            android:layout_columnWeight="2"
-            android:autofillHints=""
-            android:gravity="center_vertical|start"
-            android:inputType="number"
-            android:autoSizeTextType="uniform"
-            android:paddingStart="16dp"
-            android:maxLines="1" />
-
-        <!--        Row 4       -->
-        <TextView
-            android:id="@+id/slot_width_lbl"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_row="4"
-            android:layout_rowSpan="1"
-            android:layout_rowWeight="1"
-            android:layout_column="0"
-            android:layout_columnSpan="1"
-            android:layout_columnWeight="3"
-            android:gravity="center_vertical|end"
-            android:inputType="none"
-            android:autoSizeTextType="uniform"
-            android:maxLines="1"
-            android:text="Wall-to-wall width (mm)" />
-
-
-        <EditText
-            android:id="@+id/slot_width"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_row="4"
-            android:layout_rowSpan="1"
-            android:layout_rowWeight="1"
-            android:layout_column="1"
-            android:layout_columnSpan="1"
-            android:layout_columnWeight="2"
-            android:autofillHints=""
-            android:gravity="center_vertical|start"
-            android:inputType="number"
-            android:autoSizeTextType="uniform"
-            android:paddingStart="16dp"
-            android:maxLines="1" />
-
-        <!--        Row 5       -->
-
-        <TextView
-            android:id="@+id/filament_diameter_lbl"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_row="5"
-            android:layout_rowSpan="1"
-            android:layout_rowWeight="1"
-            android:layout_column="0"
-            android:layout_columnSpan="1"
-            android:gravity="center_vertical|end"
-            android:layout_columnWeight="3"
-            android:inputType="none"
-            android:autoSizeTextType="uniform"
-            android:maxLines="1"
-            android:text="Filament diameter (mm)" />
-
-        <EditText
-            android:id="@+id/filament_diameter"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_row="5"
-            android:layout_rowSpan="1"
-            android:layout_rowWeight="1"
-            android:layout_column="1"
-            android:layout_columnSpan="1"
-            android:layout_columnWeight="2"
-            android:autofillHints=""
-            android:gravity="center_vertical|start"
-            android:inputType="number"
-            android:autoSizeTextType="uniform"
-            android:paddingStart="16dp"
-            android:maxLines="1" />
-
-        <!--        Row 0       -->
-
-        <TextView
-            android:id="@+id/remaining_filament_lbl"
+        <ImageView
+            android:id="@+id/imageView"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_row="0"
@@ -221,15 +22,12 @@
             android:layout_rowWeight="1"
             android:layout_column="0"
             android:layout_columnSpan="1"
-            android:gravity="center_vertical|end"
             android:layout_columnWeight="1"
-            android:inputType="none"
-            android:autoSizeTextType="uniform"
-            android:maxLines="1"
-            android:text="Remaining filament (meter)" />
+            android:gravity="center_vertical|end"
+            android:src="@drawable/illustration" />
 
-        <TextView
-            android:id="@+id/txt_remaining_filament"
+        <GridLayout
+            android:id="@+id/calc_layout"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_row="0"
@@ -237,14 +35,232 @@
             android:layout_rowWeight="1"
             android:layout_column="1"
             android:layout_columnSpan="1"
-            android:gravity="center_vertical|end"
             android:layout_columnWeight="1"
-            android:inputType="none"
-            android:autoSizeTextType="uniform"
-            android:maxLines="1" />
+            android:layout_gravity="fill"
+            android:columnCount="2"
+            android:gravity="center_vertical|end"
+            android:rowCount="6">
+
+            <!--        Row 1       -->
+            <TextView
+                android:id="@+id/core_diameter_lbl"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_row="1"
+                android:layout_rowSpan="1"
+                android:layout_rowWeight="1"
+                android:layout_column="0"
+                android:layout_columnSpan="1"
+                android:layout_columnWeight="3"
+                android:autoSizeTextType="uniform"
+                android:gravity="center_vertical|end"
+                android:inputType="none"
+                android:maxLines="1"
+                android:text="Hollow core diameter (mm)" />
 
 
+            <EditText
+                android:id="@+id/core_diameter"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_row="1"
+                android:layout_rowSpan="1"
+                android:layout_rowWeight="1"
+                android:layout_column="1"
+                android:layout_columnSpan="1"
+                android:layout_columnWeight="2"
+                android:autoSizeTextType="uniform"
+                android:autofillHints=""
+                android:gravity="center_vertical|start"
+                android:hint="Enter hollow core diameter (mm)"
+                android:inputType="number"
+                android:maxLines="1"
+                android:paddingStart="16dp"
+                android:imeOptions="flagNoExtractUi"/>
+
+            <!--        Row 2       -->
+            <TextView
+                android:id="@+id/full_radius_lbl"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_row="2"
+                android:layout_rowSpan="1"
+                android:layout_rowWeight="1"
+                android:layout_column="0"
+                android:layout_columnSpan="1"
+                android:layout_columnWeight="3"
+                android:autoSizeTextType="uniform"
+                android:gravity="center_vertical|end"
+                android:inputType="none"
+                android:maxLines="1"
+                android:text="Full radial distance (mm)" />
+
+
+            <EditText
+                android:id="@+id/full_radius"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_row="2"
+                android:layout_rowSpan="1"
+                android:layout_rowWeight="1"
+                android:layout_column="1"
+                android:layout_columnSpan="1"
+                android:layout_columnWeight="2"
+                android:autoSizeTextType="uniform"
+                android:autofillHints=""
+                android:gravity="center_vertical|start"
+                android:hint="Enter full radial distance (mm)"
+                android:inputType="number"
+                android:maxLines="1"
+                android:paddingStart="16dp"
+                android:imeOptions="flagNoExtractUi"/>
+
+            <!--        Row 3       -->
+            <TextView
+                android:id="@+id/empty_radius_lbl"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_row="3"
+                android:layout_rowSpan="1"
+                android:layout_rowWeight="1"
+                android:layout_column="0"
+                android:layout_columnSpan="1"
+                android:layout_columnWeight="3"
+                android:autoSizeTextType="uniform"
+                android:gravity="center_vertical|end"
+                android:inputType="none"
+                android:maxLines="1"
+                android:text="Empty radial distance (mm)" />
+
+
+            <EditText
+                android:id="@+id/empty_radius"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_row="3"
+                android:layout_rowSpan="1"
+                android:layout_rowWeight="1"
+                android:layout_column="1"
+                android:layout_columnSpan="1"
+                android:layout_columnWeight="2"
+                android:autoSizeTextType="uniform"
+                android:autofillHints=""
+                android:gravity="center_vertical|start"
+                android:hint="Enter empty radial distance (mm)"
+                android:inputType="number"
+                android:maxLines="1"
+                android:paddingStart="16dp"
+                android:imeOptions="flagNoExtractUi"/>
+
+            <!--        Row 4       -->
+            <TextView
+                android:id="@+id/slot_width_lbl"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_row="4"
+                android:layout_rowSpan="1"
+                android:layout_rowWeight="1"
+                android:layout_column="0"
+                android:layout_columnSpan="1"
+                android:layout_columnWeight="3"
+                android:autoSizeTextType="uniform"
+                android:gravity="center_vertical|end"
+                android:inputType="none"
+                android:maxLines="1"
+                android:text="Wall-to-wall width (mm)" />
+
+
+            <EditText
+                android:id="@+id/slot_width"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_row="4"
+                android:layout_rowSpan="1"
+                android:layout_rowWeight="1"
+                android:layout_column="1"
+                android:layout_columnSpan="1"
+                android:layout_columnWeight="2"
+                android:autoSizeTextType="uniform"
+                android:autofillHints=""
+                android:gravity="center_vertical|start"
+                android:hint="Enter wall-to-wall width (mm)"
+                android:inputType="number"
+                android:maxLines="1"
+                android:paddingStart="16dp"
+                android:imeOptions="flagNoExtractUi"/>
+
+            <!--        Row 5       -->
+
+            <TextView
+                android:id="@+id/filament_diameter_lbl"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_row="5"
+                android:layout_rowSpan="1"
+                android:layout_rowWeight="1"
+                android:layout_column="0"
+                android:layout_columnSpan="1"
+                android:layout_columnWeight="3"
+                android:autoSizeTextType="uniform"
+                android:gravity="center_vertical|end"
+                android:inputType="none"
+                android:maxLines="1"
+                android:text="Filament diameter (mm)" />
+
+            <EditText
+                android:id="@+id/filament_diameter"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_row="5"
+                android:layout_rowSpan="1"
+                android:layout_rowWeight="1"
+                android:layout_column="1"
+                android:layout_columnSpan="1"
+                android:layout_columnWeight="2"
+                android:autoSizeTextType="uniform"
+                android:autofillHints=""
+                android:gravity="center_vertical|start"
+                android:hint="Enter filament diameter (mm)"
+                android:inputType="number"
+                android:maxLines="1"
+                android:paddingStart="16dp"
+                android:imeOptions="flagNoExtractUi"/>
+
+            <!--        Row 0       -->
+
+            <TextView
+                android:id="@+id/remaining_filament_lbl"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_row="0"
+                android:layout_rowSpan="1"
+                android:layout_rowWeight="1"
+                android:layout_column="0"
+                android:layout_columnSpan="1"
+                android:layout_columnWeight="1"
+                android:autoSizeTextType="uniform"
+                android:gravity="center_vertical|end"
+                android:inputType="none"
+                android:maxLines="1"
+                android:text="Remaining filament (meter)" />
+
+            <TextView
+                android:id="@+id/txt_remaining_filament"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_row="0"
+                android:layout_rowSpan="1"
+                android:layout_rowWeight="1"
+                android:layout_column="1"
+                android:layout_columnSpan="1"
+                android:layout_columnWeight="1"
+                android:autoSizeTextType="uniform"
+                android:gravity="center_vertical|end"
+                android:inputType="none"
+                android:maxLines="1" />
+
+        </GridLayout>
 
     </GridLayout>
 
-</GridLayout>
+</ScrollView>
